force-app/main/default/objects/Tracking_Detail__c/Tracking_Detail__c.object-meta.xml
<CustomObject>
    <label>Tracking Detail</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Tracking Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>