force-app/main/default/objects/Tracking_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tracking Details</relationshipLabel>
    <relationshipName>Tracking_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>