force-app/main/default/objects/Tracking_Detail__c/fields/Clicked_By__c.field-meta.xml
<CustomField>
    <fullName>Clicked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clicked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tracking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>