force-app/main/default/objects/Tracking_Detail__c/fields/Clicked_Time__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Time__c</fullName>
    <label>Clicked Time</label>
    <type>DateTime</type>
</CustomField>