force-app/main/default/objects/Tracking_Detail__c/fields/Clicked_Url__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Url__c</fullName>
    <label>Clicked Url</label>
    <type>Url</type>
</CustomField>