force-app/main/default/objects/Tracking_Detail__c/fields/Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Time__c</fullName>
    <label>Login Time</label>
    <type>DateTime</type>
</CustomField>