force-app/main/default/objects/Tracking_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visited</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Downloaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>