force-app/main/default/objects/Tracking_Detail__c/recordTypes/Login.recordType-meta.xml
<RecordType>
    <fullName>Login</fullName>
    <active>true</active>
    <label>Login</label>
</RecordType>