force-app/main/default/objects/Tracking_Detail__c/recordTypes/Purpose.recordType-meta.xml
<RecordType>
    <fullName>Purpose</fullName>
    <active>true</active>
    <label>Purpose</label>
</RecordType>